--- a/pildileht.html
+++ b/pildileht.html
@@ -2,8 +2,21 @@
 <html>
     <head>
         <title> Pildi leht </title>
+        <script>
+            function vajutus(){
+                vastus.innerText=valik1.value;
+            }
+        </script>
     </head>
     <body>
-        <img src="noot.jpg" />
+        <h1> Pildi uudistamise leht </h1>
+        <img src="noot.jpg" /><br />
+        <select id="valik1">
+            <option>meeldib</option>
+            <option>armastan</option>
+            <option>ei meeldi</option>
+        </select>
+        <input type="button" value ="saada" />
+        <div id="vastus">vastuse koht</div>
     </body>
 </html>
