--- a/pildileht.html
+++ b/pildileht.html
@@ -5,6 +5,7 @@
         <script>
             function vajutus(){
                 vastus.innerText=valik1.value;
+                let aadress="https://script.google.com/macros/s/AKfycbyq-dWlPi4HHS35HEEQ1qojzfz7SpMloCfjm0DIbEqL7cu-9lKQGa8imufD_jaX6DQ/exec?hinnang="+valik1.value;
             }
         </script>
     </head>
