--- a/valemileht.html
+++ b/valemileht.html
@@ -5,7 +5,7 @@
         <script>
             function vajutus(){
                 vastus.innerText=valik1.value;
-                let aadress="https://script.google.com/macros/s/AKfycbycWUQG4Z3IOFsdXCN3yQzOruXXbHZ3lPxxs02LeIDcX3XHmL_aZoaY1tRysUTE5uc/exec?vastus="+valik1.value;
+                let aadress="https://script.google.com/macros/s/AKfycbycWUQG4Z3IOFsdXCN3yQzOruXXbHZ3lPxxs02LeIDcX3XHmL_aZoaY1tRysUTE5uc/exec?hinnang="+valik1.value;
                 fetch(aadress).then(d => d.text()).then(function(t){vastus.innerText=t;})
             }
         </script>
